--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ APScheduler==3.6.3
 beautifulsoup4==4.7.1
 certifi==2019.6.16
 chardet==3.0.4
+dnspython==2.0.0
 idna==2.8
-lxml==4.3.4
+lxml==4.5.2
 pymongo==3.8.0
 python-dotenv==0.10.3
 pytz==2019.1
