--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,31 @@
-APScheduler==3.6.3
-beautifulsoup4==4.7.1
-certifi==2019.6.16
-chardet==3.0.4
-dnspython==2.0.0
-idna==2.8
-lxml==4.5.2
-pymongo==3.8.0
-python-dotenv==0.10.3
-pytz==2019.1
-requests==2.22.0
-six==1.13.0
-soupsieve==1.9.1
-tzlocal==2.0.0
-urllib3==1.25.3
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.10.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+coloredlogs==15.0.1
+cryptography==36.0.1
+dnspython==2.2.0
+h11==0.12.0
+humanfriendly==10.0
+idna==3.3
+outcome==1.1.0
+pycparser==2.21
+pymongo==4.0.1
+pyOpenSSL==21.0.0
+pyreadline==2.1
+pyreadline3==3.4.1
+python-dotenv==0.19.2
+pytz==2021.3
+random-user-agent==1.0.1
+requests==2.27.1
+selenium==4.1.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+trio==0.19.0
+trio-websocket==0.9.2
+urllib3==1.26.8
+wsproto==1.0.0
