--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+APScheduler==3.8.1
 async-generator==1.10
 attrs==21.4.0
+backports.zoneinfo==0.2.1
 beautifulsoup4==4.10.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -18,6 +20,7 @@ pyreadline==2.1
 pyreadline3==3.4.1
 python-dotenv==0.19.2
 pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 random-user-agent==1.0.1
 requests==2.27.1
 selenium==4.1.0
@@ -27,5 +30,7 @@ sortedcontainers==2.4.0
 soupsieve==2.3.1
 trio==0.19.0
 trio-websocket==0.9.2
+tzdata==2021.5
+tzlocal==4.1
 urllib3==1.26.8
 wsproto==1.0.0
